# hugorm

./: pyproject.toml
data/: graph.kuzu  graph.kuzu.wal
data/tenants/9cf95b45-913a-4b5e-b3e7-7855ed83661c/: tenant.kuzu  tenant.kuzu.wal
data/tenants/ab5c2fce-5e54-40f1-942f-9b47c007c673/: tenant.kuzu.wal
data/tenants/d79c0c6f-36f9-4439-bbc5-a853b8ef13f1/: tenant.kuzu.wal
deploy/: .env.example  docker-compose.yml  gen_secrets.py
deploy/sql/: zz_app_schema.sql  zzz_fix_roles.sh
deploy/sql/migrations/: 001_m6_plans_invites_tokens.sql
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-guard.tsx  error-boundary.tsx  error-init.tsx  nav.tsx  tenant-switcher.tsx  usage-bar.tsx
frontend/src/lib/: api.ts  error-reporter.ts  supabase.ts  tenant-context.tsx
scripts/: dev_bootstrap.py  seed_graph.py  smoke.py
src/hugorm/: __init__.py  api_tokens.py  app.py  billing.py  config.py  events.py  logging_setup.py  quota.py
src/hugorm/asr/: __init__.py  base.py  fake.py  faster_whisper.py
src/hugorm/audio/: __init__.py  buffer.py  chunker.py
src/hugorm/auth/: __init__.py  deps.py  jwt.py
src/hugorm/db/: __init__.py  postgres.py
src/hugorm/graph/: seed.py  (+3 more)
static/: index.html
tests/: test_agent.py  test_aligner.py  test_api_tokens.py  test_chunker.py  test_document_parser.py  test_extraction_agent.py  test_graph.py  test_graph_resolver.py  test_jwt.py  test_quota.py  test_session.py  test_session_persistence.py  test_session_refine.py  test_storage_local.py
(+35 files in other folders)
