[project]
name = "hugorm"
version = "0.1.0"
description = "Streaming diarized STT with graph-grounded LLM refinement"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "asyncpg>=0.31.0",
    "datasets>=4.5.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "kuzu>=0.11.3",
    "numpy>=2.4.2",
    "pyannote-audio>=4.0.4",
    "pydantic-ai-slim[openai]>=1.84.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "stripe>=15.0.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hugorm"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

